--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -1,3 +1,30 @@
+
+.color-red {
+    background-color: red;
+    height: 200px;
+    width: 200px;
+    border: solid 10px;
+    padding: 20px;
+}
+
+.color-yellow {
+    background-color: yellow;
+    height: 200px;
+    width: 200px;
+    border: solid 20px;
+    margin-left: 260px;
+}
+
+.color-green {
+    background-color: green;
+    height: 200px;
+    width: 200px;
+    border: solid 10px;
+    margin-left: 500px;
+}
+
+
+
 body {
-    background-color: black;
+    margin: 0%;
 }
