--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -1,30 +1,17 @@
-
-.color-red {
-    background-color: red;
-    height: 200px;
-    width: 200px;
-    border: solid 10px;
-    padding: 20px;
+.center {
+    margin: 0;
+    text-align: center;
 }
-
-.color-yellow {
-    background-color: yellow;
-    height: 200px;
-    width: 200px;
-    border: solid 20px;
-    margin-left: 260px;
-}
-
-.color-green {
-    background-color: green;
-    height: 200px;
-    width: 200px;
-    border: solid 10px;
-    margin-left: 500px;
-}
-
-
 
 body {
-    margin: 0%;
+    margin: 0;
+    text-align: center;
+}
+
+h1 {
+    margin: 0 auto 0 auto;
+}
+
+.pro {
+    text-decoration: underline;
 }
