--- a/css/styles.css
+++ b/css/styles.css
@@ -1,43 +1,167 @@
+.center {
+    margin: 0;
+    text-align: center;
+}
+
 body {
-    background-color: #3A3845;
-}
-
-hr {
-    border-style: dashed none none;
-    border-top-style: dashed;
-    border-color: #00ADB5;
-    border-width: 20px;
-    width: 15%;
-}
-
-img {
-    src: "/docs/cursed_cat.jpg";
-}
-
-p {
-    color:#F8EDE3;
+    margin: 0;
+    text-align: center;
+    font-family: 'Noto Sans Mono', monospace;
 }
 
 h1 {
-    color: #F8EDE3
+    font-size: 5.625rem;
+    margin: 0 4 0 auto;
+    margin-top: 50px;
+    color: #66BFBF;
+    font-family: 'Roboto Mono', monospace;
 }
 
 h2 {
-    color:#F8EDE3
+    font-size: 2.5rem;
+    margin-top: 0;
+    margin-bottom: 25px;
+    color: #66BFBF;
+    font-weight: normal;
+    
 }
 
 h3 {
-    color:#F8EDE3
+    color: #11999E;
 }
 
-h4 {
-    color:#F8EDE3
+strong {
+    font-style: italic;
 }
 
-a {
-    color: #F8EDE3;
+hr {
+    border: none;
+    border-top: 10px dotted #EAF6F6;
+    width: 85px;
 }
 
-th {
-    color: #F8EDE3;
+.pro {
+    text-decoration: underline;
+}
+
+.bottom-cloud {
+    position: absolute;
+    left: 250px;
+}
+
+.top-cloud {
+    position: absolute;
+    right: 250px;
+    top: 100px;
+}
+
+.background {
+    padding-top: 30px;
+    background-color: #EAF6F6;
+}
+
+.my-description {
+    font-family: 'Roboto Mono', monospace;
+    font-size: 1.5rem;
+    margin-top: 0px;
+    margin-bottom: 75px;
+    color: #11999E;
+}
+
+
+.footer-link {
+    color:  #11999E;
+    margin-left: 20px;
+}
+
+.footer-link:hover {
+    color: #EAF6F6;
+}
+
+.hello-description {
+    color: #40514E;
+    text-align: center;
+    word-break: break-all;
+    width: 30%;
+    margin: auto;
+}
+
+.skill-row {
+    width: 50%;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 30px;
+    text-align: left;
+    line-height: 2;
+    min-width: 30%;
+    max-width: 30%;
+}
+
+.code-img {
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+    margin-top: 60px;
+}
+
+.coffee-img {
+    width: 25%;
+    float: right;
+    margin-left: -20px;
+    margin-top: 45px;
+}
+
+.code-skill-description {
+    clear: right;
+}
+
+.bottom-container {
+    background-color: #66BFBF;
+    height: 100px;
+    line-height: 25px;
+    margin: auto;
+    margin-top: 55px;
+}
+
+.profile {
+    padding-bottom: 20px;
+}
+
+
+.btn {
+    background: #11cdd4;
+    background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+    background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: 'Roboto Mono', monospace;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+}
+
+.btn:hover {
+    background: #30e3cb;
+    background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+    text-decoration: none;
+}
+
+.touch {
+    width: 600px;
+    margin: auto;
+    margin-bottom: 25px;
+}
+
+.copyright {
+    color: #EAF6F6;
+    font-size: 0.75rem;
 }
